# delivery_robot

./: .gitignore  DEPLOY.md  INSTALL.sh  LICENSE  README.md  TECHNICAL_REPORT.md  inspect_map.py  inspect_map2.py  setup.cfg  setup.py
config/: nav2_params.yaml  slam_params.yaml
delivery_robot/: delivery_mission.py  health_check.py  slam_explorer.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/delivery_robot/lib/delivery_robot/: delivery_mission  health_check  record_waypoints  slam_explorer
install/delivery_robot/share/delivery_robot/: package.ps1  package.sh  package.xml
install/delivery_robot/share/delivery_robot/config/: nav2_params.yaml  slam_params.yaml
install/delivery_robot/share/delivery_robot/launch/: navigation_launch.py  slam_launch.py
install/delivery_robot/share/delivery_robot/maps/: office_map.pgm  office_map.yaml
install/delivery_robot/share/delivery_robot/rviz/: navigation.rviz  slam.rviz
install/delivery_robot/share/delivery_robot/urdf/: robot.urdf.xacro
install/delivery_robot/share/delivery_robot/worlds/: office.world
launch/: navigation_launch.py  slam_launch.py
log/: latest_build  latest_test  latest_test-result
maps/: office_map.yaml
rviz/: navigation.rviz  slam.rviz
test/: test_delivery_mission.py
urdf/: robot.urdf.xacro
worlds/: office.world
