<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>delivery_robot</name>
  <version>1.0.0</version>
  <description>
    Autonomous Indoor Delivery Robot — Full-Stack ROS 2 Simulation.
    A differential-drive robot that explores an unknown office, builds a map
    with slam_toolbox, then autonomously delivers packages to specified rooms
    using the Nav2 navigation stack.
  </description>

  <maintainer email="team@delivery-robot.dev">Delivery Robot Team</maintainer>
  <license>MIT</license>

  <author email="team@delivery-robot.dev">Delivery Robot Team</author>
  <url type="repository">https://github.com/YOUR_USERNAME/delivery_robot</url>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime Python dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Launch / description dependencies -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <!-- Navigation stack -->
  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>slam_toolbox</depend>

  <!-- Visualisation -->
  <depend>rviz2</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
